improv(oauth): github email scope, oauth redirect, signout updated
- added email scope to github oauth provider
- signout and clearing cookies, (still need few changes)
- added /auth/user to get authenticated user
- other minor tweaks
