# api/router.go
@@ -11,6 +11,11 @@ func (a *API) setupRouter() {
 	c := chi.NewRouter()
 	defer func() { a.router = c }()
 
+	// c.Use(mw.Logger(a.logr, a.config.Logger))
+	c.Use(mw.UseCors())
+	c.Use(mw.RequestID())
+	c.Use(middleware.Compress(5))
+	c.Use(middleware.RealIP)
 	c.Use(middleware.Recoverer)
 
 	c.Get("/", a.SysWelcome)
@@ -19,20 +24,24 @@ func (a *API) setupRouter() {
 
 	// NOTE: Authentication routes
 	c.Route("/auth", func(r chi.Router) {
+		r.With(mw.RequiresAuth(a.repo, a.tokens, a.cache)).Get("/user", a.AuthUser)
+		r.Get("/signin", a.Signin)
+		r.Post("/signup", a.Signup)
+		r.Get("/signout/{provider}", a.Signout)
+
 		r.Get("/{provider}", a.AuthProvider)
 		r.Get("/{provider}/callback", a.AuthCallback)
-		r.Get("/logout/{provider}", a.AuthLogout)
 	})
 
 	c.Route("/users", func(r chi.Router) {
-		r.Use(mw.RequiresAuth(a.repo))
+		r.Use(mw.RequiresAuth(a.repo, a.tokens, a.cache))
 		r.Use(mw.RequiresVerified())
 		r.Use(mw.RequiresMaster())
 		r.Get("/", a.UsersGet)
 	})
 
 	c.Route("/users/{identity}", func(r chi.Router) {
-		r.Use(mw.RequiresAuth(a.repo))
+		r.Use(mw.RequiresAuth(a.repo, a.tokens, a.cache))
 		r.Use(mw.RequiresVerified())
 		r.Use(mw.RequiresPermissions())
 
