# docs/swagger.json
@@ -57,16 +57,58 @@
                 }
             }
         },
-        "/auth/logout/{provider}": {
+        "/auth/signin": {
             "get": {
-                "description": "Logout from a provider",
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Signin using email and password",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Logout",
+                "summary": "Signin",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "If true, returns User in body",
+                        "name": "user",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "If true, returns AccessToken, RefreshToken and SessionID in body",
+                        "name": "cookies",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SignInResponse",
+                        "schema": {
+                            "$ref": "#/definitions/SignInResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/signout/{provider}": {
+            "get": {
+                "description": "Signout from a provider",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Signout",
                 "parameters": [
                     {
                         "type": "string",
@@ -77,6 +119,60 @@
                     }
                 ],
                 "responses": {}
+            }
+        },
+        "/auth/signup": {
+            "post": {
+                "description": "Signup using email and password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Signup",
+                "parameters": [
+                    {
+                        "description": "Signup request params",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/SignUpRequestParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "User object",
+                        "schema": {
+                            "$ref": "#/definitions/UserResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/user": {
+            "get": {
+                "description": "Returns Authenticated User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "User",
+                "responses": {
+                    "200": {
+                        "description": "UserResponse",
+                        "schema": {
+                            "$ref": "#/definitions/UserResponse"
+                        }
+                    }
+                }
             }
         },
         "/auth/{provider}": {
@@ -100,7 +196,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "User Response",
+                        "description": "User object",
                         "schema": {
                             "$ref": "#/definitions/UserResponse"
                         }
@@ -153,7 +249,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Users Response",
+                        "description": "UsersResponse",
                         "schema": {
                             "$ref": "#/definitions/UsersResponse"
                         }
@@ -182,7 +278,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "User Response",
+                        "description": "UserResponse",
                         "schema": {
                             "$ref": "#/definitions/UserResponse"
                         }
@@ -212,13 +308,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/UserUpdateParams"
+                            "$ref": "#/definitions/UpdateUserParams"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "User Response",
+                        "description": "UserResponse",
                         "schema": {
                             "$ref": "#/definitions/UserResponse"
                         }
@@ -247,6 +343,60 @@
                     "type": "string"
                 },
                 "uptime": {
+                    "type": "string"
+                }
+            }
+        },
+        "SignInResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "session_id": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/User"
+                }
+            }
+        },
+        "SignUpRequestParams": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "UpdateUserParams": {
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 30
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 30
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 100
+                },
+                "picture_url": {
                     "type": "string"
                 }
             }
@@ -281,6 +431,9 @@
                 "updated_at": {
                     "type": "string"
                 },
+                "username": {
+                    "type": "string"
+                },
                 "verified": {
                     "type": "boolean"
                 }
@@ -291,26 +444,6 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/User"
-                }
-            }
-        },
-        "UserUpdateParams": {
-            "type": "object",
-            "properties": {
-                "first_name": {
-                    "type": "string",
-                    "maxLength": 30
-                },
-                "last_name": {
-                    "type": "string",
-                    "maxLength": 30
-                },
-                "name": {
-                    "type": "string",
-                    "maxLength": 100
-                },
-                "picture_url": {
-                    "type": "string"
                 }
             }
         },
@@ -335,6 +468,11 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
